name: arithmetic
version: 1.1
category: Number Theory
synopsis: Natural number arithmetic
license: MIT
license-file: LICENSE
cabal-version: >= 1.8.0.2
build-type: Simple
author: Joe Leslie-Hurd <joe@gilith.com>
maintainer: Joe Leslie-Hurd <joe@gilith.com>
description:
  This package implements a library of natural number arithmetic functions,
  including Montgomery multiplication, continued fractions, Lucas sequences
  and the Williams p+1 factorization method.

Library
  build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.8 && < 2.0,
    opentheory >= 1.0 && < 2.0,
    opentheory-bits >= 1.0 && < 2.0,
    opentheory-divides >= 1.0 && < 2.0
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    Arithmetic.ContinuedFraction,
    Arithmetic.Factor,
    Arithmetic.Heap,
    Arithmetic.Lucas,
    Arithmetic.Modular,
    Arithmetic.Montgomery,
    Arithmetic.Prime,
    Arithmetic.Prime.Sieve,
    Arithmetic.Quadratic,
    Arithmetic.Random,
    Arithmetic.Smooth,
    Arithmetic.Utility

executable arithmetic
  build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.8 && < 2.0,
    opentheory >= 1.0 && < 2.0,
    opentheory-bits >= 1.0 && < 2.0,
    opentheory-divides >= 1.0 && < 2.0
  hs-source-dirs: src
  ghc-options: -Wall
  main-is: Main.hs

test-suite arithmetic-test
  type: exitcode-stdio-1.0
  build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.8 && < 2.0,
    opentheory >= 1.0 && < 2.0,
    opentheory-bits >= 1.0 && < 2.0,
    opentheory-divides >= 1.0 && < 2.0,
    opentheory-prime >= 1.0 && < 2.0
  hs-source-dirs: src
  ghc-options: -Wall
  main-is: Test.hs
