Name: opentheory-char
Version: 1.21
Description: Unicode characters
License: MIT
License-file: LICENSE
Cabal-version: >= 1.8.0.6
Build-type: Simple
Author: Joe Hurd <joe@gilith.com>
Maintainer: Joe Hurd <joe@gilith.com>

Library
  Build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.52 && <= 1.53,
    opentheory-parser >= 1.93 && <= 1.99

  hs-source-dirs: src

  ghc-options: -Wall -Werror

  Exposed-modules:
    OpenTheory.Data.Unicode
    OpenTheory.Data.Unicode.UTF8

Executable opentheory-char-test
  Build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.52 && <= 1.53,
    opentheory-parser >= 1.93 && <= 1.99

  hs-source-dirs: src, testsrc

  ghc-options: -Wall -Werror

  Main-is: Test.hs
