Name: opentheory-parser
Version: 1.14
Description: Simple stream parsers
License: MIT
License-file: LICENSE
Cabal-version: >= 1.8.0.6
Build-type: Simple
Author: Joe Hurd <joe@gilith.com>
Maintainer: Joe Hurd <joe@gilith.com>

Library
  Build-depends:
    base >= 4.0 && < 5.0,
    opentheory >= 1.0 && < 2.0

  hs-source-dirs: src

  ghc-options: -Wall -Werror

  Exposed-modules:
    OpenTheory.Parser
    OpenTheory.Parser.Stream
