Name: opentheory-parser
Version: 1.100
Description: Simple stream parsers
License: MIT
License-file: LICENSE
Cabal-version: >= 1.8.0.6
Build-type: Simple
Author: Joe Hurd <joe@gilith.com>
Maintainer: Joe Hurd <joe@gilith.com>

Library
  Build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.39 && <= 1.54

  hs-source-dirs: src

  ghc-options: -Wall -Werror

  Exposed-modules:
    OpenTheory.Parser
    OpenTheory.Parser.Stream

Executable opentheory-parser-test
  Build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.39 && <= 1.54

  hs-source-dirs: src, testsrc

  ghc-options: -Wall -Werror

  Main-is: Test.hs
