Name: opentheory-primitive
Version: 1.0
Description: Haskell primitives used by OpenTheory packages
License: MIT
License-file: LICENSE
Cabal-version: >= 1.8.0.6
Build-type: Simple
Author: Joe Hurd <joe@gilith.com>
Maintainer: Joe Hurd <joe@gilith.com>

Library
  Build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2.0,
    QuickCheck >= 2.4.0.1 && < 3.0

  hs-source-dirs: src

  ghc-options: -Wall -Werror

  Exposed-modules:
    OpenTheory.Primitive.Byte
    OpenTheory.Primitive.Natural
    OpenTheory.Primitive.Random
    OpenTheory.Primitive.Word16
    OpenTheory.Primitive.Test

Executable opentheory-primitive-test
  Build-depends:
    base >= 4.0 && < 5.0,
    random >= 1.0.1.1 && < 2,
    QuickCheck >= 2.4.0.1 && < 3.0

  hs-source-dirs: src, testsrc

  ghc-options: -Wall -Werror

  Main-is: Test.hs
