name: test-opentheory
version: 1.1
category: Formal Methods
synopsis: Testing packages exported from OpenTheory
license: MIT
license-file: LICENSE
cabal-version: >= 1.8.0.2
build-type: Simple
author: Joe Leslie-Hurd <joe@gilith.com>
maintainer: Joe Leslie-Hurd <joe@gilith.com>
description:
  This package consists of various tests of the Haskell packages
  exported from formally verified OpenTheory packages.

Library
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 1.0,
    directory >= 1.0 && < 1.2,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.0 && < 2.0,
    opentheory-char >= 1.0 && < 2.0,
    opentheory-prime >= 1.0 && < 2.0

  hs-source-dirs: src

  ghc-options: -Wall

  exposed-modules:
    OpenTheory.Test.Prime

executable nth-prime
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 1.0,
    directory >= 1.0 && < 1.2,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.0 && < 2.0,
    opentheory-char >= 1.0 && < 2.0,
    opentheory-prime >= 1.0 && < 2.0

  hs-source-dirs: src, testsrc

  ghc-options: -Wall

  main-is: NthPrime.hs

executable test-opentheory
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 1.0,
    directory >= 1.0 && < 1.2,
    opentheory-primitive >= 1.0 && < 2.0,
    opentheory >= 1.0 && < 2.0,
    opentheory-char >= 1.0 && < 2.0,
    opentheory-prime >= 1.0 && < 2.0

  hs-source-dirs: src, testsrc

  ghc-options: -Wall

  main-is: Main.hs
