Name: example-utf8
Version: 1.0
Description: A verified UTF8 parser
License: MIT
License-file: LICENSE
Cabal-version: >= 1.8.0.6
Build-type: Simple
Author: Joe Hurd <joe@gilith.com>
Maintainer: Joe Hurd <joe@gilith.com>

Library
  Build-depends:
    base >= 4.0 && < 5.0

  hs-source-dirs: src

  ghc-options: -Wall -Werror

  Exposed-modules:
    OpenTheory.Parser

Executable example-utf8-test
  Build-Depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.4.0.1 && < 3.0

  hs-source-dirs: testsrc

  Main-is: Test.hs
